fix:Makefile:hertz-gen-api
