# cmd/api/biz/handler/api/launch_screen_service.go
@@ -4,6 +4,10 @@ package api
 
 import (
 	"context"
+	"github.com/west2-online/fzuhelper-server/cmd/api/biz/pack"
+	"github.com/west2-online/fzuhelper-server/cmd/api/biz/rpc"
+	"github.com/west2-online/fzuhelper-server/kitex_gen/launch_screen"
+	"github.com/west2-online/fzuhelper-server/pkg/errno"
 
 	"github.com/cloudwego/hertz/pkg/app"
 	"github.com/cloudwego/hertz/pkg/protocol/consts"
@@ -11,6 +15,23 @@ import (
 )
 
 // CreateImage .
+// @Summary CreateImage
+// @Description create launch_screen image
+// @Accept json/form
+// @Produce json
+// @Param pic_type query int true "1为空，2为页面跳转，3为app跳转"
+// @Param duration query int false "展示时间"
+// @Param href query string false "链接"
+// @Param image formData file true "图片"
+// @Param start_at query int true "开始time(时间戳)"
+// @Param end_at query int true "结束time(时间戳)"
+// @Param s_type query int true "类型"
+// @Param frequency query int false "一天展示次数"
+// @Param start_time query int true "每日起始hour"
+// @Param end_time query int true "每日结束hour"
+// @Param authorization header string false "token"
+// @Param text query string true "描述"
+// @Param regex query string false "json类型，正则匹配项"
 // @router /launch_screen/api/image [POST]
 func CreateImage(ctx context.Context, c *app.RequestContext) {
 	var err error
@@ -20,9 +41,47 @@ func CreateImage(ctx context.Context, c *app.RequestContext) {
 		c.String(consts.StatusBadRequest, err.Error())
 		return
 	}
+	token := c.GetHeader("authorization")
+	imageFile, err := c.FormFile("image")
+	if err != nil {
+		c.String(consts.StatusBadRequest, err.Error())
+		return
+	}
 
 	resp := new(api.CreateImageResponse)
 
+	if !pack.IsAllowImageExt(imageFile.Filename) {
+		pack.RespError(c, errno.SuffixError)
+		return
+	}
+
+	imageByte, err := pack.FileToByte(imageFile)
+	if err != nil {
+		pack.RespError(c, errno.BizError)
+		return
+	}
+
+	respImage, err := rpc.CreateImageRPC(ctx, &launch_screen.CreateImageRequest{
+		PicType:   req.PicType,
+		Duration:  req.Duration,
+		Href:      req.Href,
+		Image:     imageByte,
+		StartAt:   req.StartAt,
+		EndAt:     req.EndAt,
+		SType:     req.SType,
+		Frequency: req.Frequency,
+		StartTime: req.StartTime,
+		EndTime:   req.EndTime,
+		Text:      req.Text,
+		Regex:     req.Regex,
+		Token:     string(token),
+	})
+	if err != nil {
+		pack.RespError(c, err)
+		return
+	}
+	resp.Base = pack.BuildSuccessResp()
+	resp.Picture = pack.BuildLaunchScreen(respImage)
 	c.JSON(consts.StatusOK, resp)
 }
 
